Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48424

[REG 5.5-5.6] Windows/Release builds: qmlimportscanner no longer reports "QtQuick.PrivateWidgets" when scanning qtquickcontrols\examples\quick\controls\gallery example

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.6.0 Beta
    • 5.6.0 Alpha
    • Quick: Other
    • None
    • Windows
    • a13743adec73f61fc8d381dee9f83449e2286653 (qttools/5.6, 28.9.2015, 5.6b)

      Steps to reproduce [Windows]:

      • Build qtquickcontrols\examples\quick\controls\gallery
      • Run windeployqt [release|debug]
      • Run [release|debug]\gallery.exe
      • Note error:
        QQmlApplicationEngine failed to load component
        qrc:/main.qml:55 Type MessageDialog unavailable
        qrc:/QtQuick/Dialogs/WidgetMessageDialog.qml:38 module "QtQuick.PrivateWidgets" is not installed
        
      • Note: This shows on Windows prominently since windeployqt patches Qt5Core.dll to rely on paths relative to '.', it no longer defaults to the Qt version in path.

      Alternatively, compare the logs obtained by:

      qmlimportscanner -rootPath . -importPath ...\qtbase\qml 
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes