windeployqt: Workaround for QtQuick.PrivateWidgets

Deploy PrivateWidgets if QtWidgets and QtQuick.Controls are in use
similar to how macdeployqt handles it.

Task-number: QTBUG-48424
Task-number: QTBUG-45977
Change-Id: Ia9d836b86edbe9d1f75ec5ec74edf66dc321b24b
Reviewed-by: Oliver Wolff <oliver.wolff@theqtcompany.com>